# ros

./: .gitmodules  README.md
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/lib/automated_turtle/: robot_move_topics.py
catkin_ws/devel/lib/pkgconfig/: automated_turtle.pc  ros_basics_tutorials.pc  ros_essentials_cpp.pc  ros_service_assignment.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc  turtlesim_cleaner.pc
catkin_ws/devel/lib/ros_basics_tutorials/: listener  talker
catkin_ws/devel/lib/ros_essentials_cpp/: add_two_ints_client  add_two_ints_server  image_pub_sub_cpp  listener_node  open_copy_cpp  read_video_cpp  scan_subscriber_cpp  talker_node  turtlesim_clean_node
catkin_ws/devel/lib/ros_service_assignment/: computeRectangleArea_client.py  computeRectangleArea_server.py
catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
catkin_ws/devel/lib/turtlebot3_example/: turtlebot3_bumper  turtlebot3_client  turtlebot3_cliff  (+3 more)
catkin_ws/src/automated_turtle/: CMakeLists.txt
catkin_ws/src/ros_basics_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/ros_basics_tutorials/src/: listener.cpp  talker.cpp
catkin_ws/src/ros_service_assignment/: CMakeLists.txt
catkin_ws/src/turtlesim_cleaner/: CMakeLists.txt
catkin_ws_2/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws_2/tb3+house+map/tb3 house map/: tb3_house_map.yaml
(+60 files in other folders)
